--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="subheading mb-5"> ORCID: <a href="https://orcid.org/0000-0002-2704-3858">0000-0002-2704-3858</a> 
           <div class="subheading mb-5"> Web of Science Researcher ID: <a href="https://publons.com/researcher/2923553/diego-vallejo-huanga/">O-1902-2019</a>   
           <div class="subheading mb-5"> SCOPUS ID: <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=57195344702&zone=">57195344702</a>
-          <div class="subheading mb-5"> Senescyt Researcher ID: No. REG-INV-19-04059</a> </div> </div>
+          <div class="subheading mb-5"> Senescyt Researcher ID: No. REG-INV-19-04059</a> </div> </div> </div>
           </div>
           </div>
           <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA Research Group) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San Francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
