--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><ul><li>Technical Co-Chair in <a href="http://ahfe2020.org/program3.html">International Conference on Applied Human Factors and Ergonomics AHFE 2020, Session 149: Applications in Software, Service and Systems Engineering IV</a></p>
+          <p><ul><li>Technical Co-Chair in the session Applications in Software, Service and Systems Engineering IV of <a href="http://ahfe2020.org/program3.html">International Conference on Applied Human Factors and Ergonomics AHFE 2020.</a></p>
           <p><li>Scientific Technical Chair in <a href="http://smartechic.org/committees.html">International Conference on Smart Technologies, Systems and Applications SmartTech-IC-2019.</a></p>
           <p><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-030-05532-5%2F1.pdf">International Conference on Technology Trends CITT2018.</a></p>
           <p><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-030-02828-2%2F1.pdf">Internactional Conference TIC.EC 2018. </a></p>
