--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Computer Sciences </h3>
               <div class="subheading mb-3">Universidad Politécnica Salesiana</div>
-              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks, Computational Statistics and Machine Learning.</p>
+              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks, Computational Statistics, Machine Learning and Applied Mathematics in Engineering.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2017 - Present</span>
@@ -122,7 +122,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Mathematics</h3>
               <div class="subheading mb-3">Universidad San Francisco de Quito</div>
-              <p>Subject Taught: Mathematics for Health Sciences, Inferential Statistics, Integral Calculus and Quantitative Models.</p>
+              <p>Subject Taught: Mathematics for Health Sciences, Inferential Statistics, Integral Calculus, Quantitative Models, and Probability and Statistics.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2016 - Present</span>
