--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Computer Sciences </h3>
               <div class="subheading mb-3">Universidad Politécnica Salesiana</div>
-              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks, Computational Statistics, Machine Learning and Applied Mathematics in Engineering.</p>
+              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks, Computational Statistics, Machine Learning, and Applied Mathematics in Engineering.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2017 - Present</span>
@@ -133,7 +133,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor of the School of Physical Sciences and Mathematics</h3>
               <div class="subheading mb-3">Universidad de las Américas</div>
-              <p>Subject Taught: Mathematical Logic, Differential Calculus, Integral Calculus, Vector Physical, Math Propaedeutic and Operations Research.</p>
+              <p>Subject Taught: Mathematical Logic, Differential Calculus, Integral Calculus, Vector Physical, Math Propaedeutic, and Operations Research.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2012 - August 2014 / October 2016 - Present</span>
@@ -197,7 +197,7 @@
                  <div class="resume-content mr-auto">
                      <h3 class="mb-0">Articles</h3>
 		          </h2><ul><li>Sebastián Valladares, Mayerly Toscano, Rodrigo Tufiño, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.1007/978-3-030-68017-6_51"><em>“Performance Evaluation of the Nvidia Jetson Nano Through a Real-time Machine Learning Application”</em></a>, Proceedings of the <a href="https://www.springer.com/gp/book/9783030680169"> 4th International Conference on Intelligent Human Systems Integration IHSI 2021</a>, Advances in Intelligent Systems and Computing, Springer, Palermo, Italy, February 22-24, 2021.</p>
-		          <li>Ismael Utitiaj, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.1145/3446132.3446424"><em>“Sentiment Analysis Tool for Spanish Tweets in the Ecuadorian Context (In Press)”</em></a>, Proceedings of the <a href="http://www.mlnlp.net/index.html"> 3rd International Conference on Machine Learning and Natural Language Processing MLNLP 2020</a>, Association for Computing Machinery, ACM, Sanya, China, December 24-26, 2020.</p>
+		          <li>Ismael Utitiaj, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.1145/3446132.3446424"><em>“Sentiment Analysis Tool for Spanish Tweets in the Ecuadorian Context”</em></a>, Proceedings of the <a href="https://dl.acm.org/doi/proceedings/10.1145/3446132"> 3rd International Conference on Machine Learning and Natural Language Processing MLNLP 2020</a>, Association for Computing Machinery, ACM, Sanya, China, December 24-26, 2020.</p>
 		          <li><p><strong>Diego Vallejo-Huanga</strong>, Marco Ambuludi, Paulina Morillo,<a href="https://latamt.ieeer9.org/index.php/transactions/article/view/3980"><em>“Empirical Exploration of Machine Learning Techniques for Detection of Anomalies Based on NIDS”</em></a>, Journal <a href="https://latamt.ieeer9.org/index.php/transactions"> IEEE Latin America Transactions</a>, IEEE - USA. ISSN: 1548-0992, 2020.</p>
 		          <li>José Guerra, <strong>Diego Vallejo-Huanga</strong>, Nathaly Jaramillo, Richard Macas, Daniel Díaz,<a href="https://doi.org/10.1007/978-3-030-51328-3_51"><em>“Nondeterministic Finite Automata for Modeling an Ecuadorian Sign Language Interpreter”</em></a>, Proceedings of the <a href="https://www.springer.com/gp/book/9783030513276"> 7th International Conference on Human Factors, Software and Systems Engineering</a>, Advances in Intelligent Systems and Computing, Springer, San Diego CA, USA, July 16-20, 2020.</p>
 		          <li>Matheo Chantera, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.1007/978-3-030-51828-8_119"><em>“Virtual Rehabilitation Platform for Left-Handed People Working in Industrial Environments”</em></a>, Proceedings of the <a href="https://www.springer.com/us/book/9783030518271"> 3rd International Conference on Human Factors and Assistive Technology</a>, Advances in Intelligent Systems and Computing, Springer, San Diego CA, USA, July 16-20, 2020.</p>
