--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
 	     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                  <div class="resume-content mr-auto">
                      <h3 class="mb-0">Articles</h3>
-		          </h2><ul><li>Santiago Vizcaíno, <strong>Diego Vallejo-Huanga</strong>, <a href="http://www.ccai.net/"><em>“LAN Network Optimization after a DDoS Attack detected with Supervised Learning (In-Press)”</em></a>, Proceedings of the <a href="http://www.ccai.net/program.html"> 2nd International Conference on Computer Communication and Artificial Intelligence CCAI 2022</a>, IEEE Xplore Digital Library, Beijing, China, May 06-08, 2022.</p>
+		          </h2><ul><li>Herig Recalde, Santiago Soria, <strong>Diego Vallejo-Huanga</strong>, <a href="http://acisinternational.org/"><em>“Internal Search Engine and Recommender System with Natural Language Processing in PaaS (In-Press)”</em></a>, Proceedings of the <a href="http://acisinternational.org/conferences/sera-2022/"> 20th International Conference on Software Engineering Research, Management and Applications SERA 2022</a>, IEEE Xplore Digital Library, Las Vegas, Nevada, USA, May 25-27, 2022.</p>
+		          <li><strong>Diego Vallejo-Huanga</strong>, Santiago Vizcaíno,<a href="http://www.ccai.net/"><em>“LAN Network Optimization after a DDoS Attack detected with Supervised Learning (In-Press)”</em></a>, Proceedings of the <a href="http://www.ccai.net/program.html"> 2nd International Conference on Computer Communication and Artificial Intelligence CCAI 2022</a>, IEEE Xplore Digital Library, Beijing, China, May 06-08, 2022.</p>
                           <li>Dayana Andrade, <strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, <a href="https://iscsi-conference.org/"><em>“Fuzzy Logic Model for Failure Analysis in Electric Power Distribution Systems (In-Press)”</em></a>, Proceedings of the <a href="https://iscsi-conference.org/commitee/"> International Conference on Industry Science and Computer Sciences Innovation iSCSi 2022</a>, Procedia Computer Science, Elsevier, Vila Nova de Gaia, Porto, Portugal, March 09-11, 2022.</p>
 		     	  <li><strong>Diego Vallejo-Huanga</strong>, Esteban Carrera, Jonathan Mañay, <a href="https://doi.org/10.1109/ICMLA52953.2021.00254"><em>“AuTGeLy: Automatic Title Generator based on Song Lyrics Extractions”</em></a>, Proceedings of the <a href="https://ieeexplore.ieee.org/xpl/conhome/9679834/proceeding"> 20th International Conference on Machine Learning and Applications ICMLA 2021</a>, IEEE Xplore Digital Library, Pasadena, California, USA, December 13-16, 2021.</p>
 		     	  <li>Ayleen Reyes, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.1007/978-3-030-99170-8_16"><em>“Automatic Recognition of Pictograms with Convolutional Neural Network Approach for Literacy”</em></a>, Proceedings of the <a href="https://link.springer.com/book/9783030991715"> 2nd International Conference on Smart Technologies, Systems and Applications SmartTech-IC 2021</a>, Communications in Computer and Information Science, Springer, Quito, Ecuador, December 1-3, 2021.</p>
@@ -264,7 +265,8 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><ul><li>Peer reviewer of Research Projects 2021 <a href="http://www.uptc.edu.co/">Universidad Pedagógica y Tecnológica de Colombia UPTC.</a></p>
+          <p><ul><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
+          <p><li>Peer reviewer of Research Projects 2021 <a href="http://www.uptc.edu.co/">Universidad Pedagógica y Tecnológica de Colombia UPTC.</a></p>
           <p><li>Technical Co-Chair in the session Applications in Software, Service and Systems Engineering IV of <a href="http://2021.ahfe.org/files/AHFE2020-FinalProgram.pdf">International Conference on Applied Human Factors and Ergonomics AHFE 2020.</a></p>
 	  <p><li>Scientific Technical Chair in <a href="http://smartechic.org/committees.html">International Conference on Smart Technologies, Systems and Applications SmartTech-IC-2019.</a></p>
           <p><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-030-05532-5%2F1.pdf">International Conference on Technology Trends CITT2018.</a></p>
@@ -281,6 +283,10 @@
           <h2 class="mb-5">Awards</h2>
           <ul class="fa-ul mb-0">
             <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Postgraduate Scholarship 2021 – Master in Mathematical Methods and Numerical Simulation – Universidad Politécnica Salesiana.</li>
+            <li>
+	    <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Best Academic Record 2016 – Master's Degree in Information Management – Universitat Politècnica de València.</li>
             <li>
