--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><ul><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
+          <p><ul><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>
+          <p><li>Reviewer in the Journal of Life Sciences <a href="https://lagranja.ups.edu.ec/index.php/granja/">La Granja</a>. ISSN: 1390-3799, e-ISSN: 1390-8596, DOI: 10.17163/lgr.</a></p>
+	  <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
           <p><li>Peer reviewer of Research Projects 2021 <a href="http://www.uptc.edu.co/">Universidad Pedagógica y Tecnológica de Colombia UPTC.</a></p>
           <p><li>Technical Co-Chair in the session Applications in Software, Service and Systems Engineering IV of <a href="http://2021.ahfe.org/files/AHFE2020-FinalProgram.pdf">International Conference on Applied Human Factors and Ergonomics AHFE 2020.</a></p>
 	  <p><li>Scientific Technical Chair in <a href="http://smartechic.org/committees.html">International Conference on Smart Technologies, Systems and Applications SmartTech-IC-2019.</a></p>
