--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Computer Sciences </h3>
               <div class="subheading mb-3">Universidad Politécnica Salesiana</div>
-              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks, Computational Statistics, Machine Learning, Applied Mathematics in Engineering, Statistics for Business, and Multivariate Analysis and Stochastic Models.</p>
+              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks, Computational Statistics, Machine Learning, Applied Mathematics in Engineering, Statistics for Business, Multivariate Analysis and Stochastic Models, and Artificial Intelligence.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2017 - Present</span>
