--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Universitat Politècnica de València</h3>
+              <div class="subheading mb-3">Philosophie Doctor</div>
+              <div>Computer Science / Artificial Intelligence</div>
+              
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2023 - Present</span>
+            </div>
+          </div>
+		
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Universitat Politècnica de València</h3>
               <div class="subheading mb-3">Master in Science</div>
               <div>Information Management</div>
               
