--- a/index.html
+++ b/index.html
@@ -303,8 +303,14 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Postgraduate Scholarship 2021 – Master in Mathematical Methods and Numerical Simulation – Universidad Politécnica Salesiana.</li>
+              Doctoral Scholarship 2023 – Fundación Carolina – Computer Science Doctorate – Universitat Politècnica de València.</li>
             <li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              CEDIA Research Grant (Fondos Divulga 2023) for the "Intellisys Conference" – Holland, Netherlands.</li>    
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Postgraduate Scholarship 2021 – Master in Mathematical Methods and Numerical Simulation – Universidad Politécnica Salesiana.</li>    
 	    <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Best Academic Record 2016 – Master's Degree in Information Management – Universitat Politècnica de València.</li>
