--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Universidad Politécnica Salesaina</h3>
+              <h3 class="mb-0">Universidad Politécnica Salesiana</h3>
               <div class="subheading mb-3">Master in Science</div>
               <div>Mathematical Methods and Numerical Simulation</div>
               
@@ -303,11 +303,11 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Doctoral Scholarship 2023 – Fundación Carolina – Computer Science Doctorate – Universitat Politècnica de València.</li>
+              Fundación Carolina Scholarship 2023 – Computer Science Doctorate – Universitat Politècnica de València.</li>
             <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              CEDIA Research Grant (Fondos Divulga 2023) for the "Intellisys Conference" – Holland, Netherlands.</li>    
+              CEDIA Research Grant “Fondos Divulga 2023” – Intellisys Conference, Netherlands.</li>    
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Postgraduate Scholarship 2021 – Master in Mathematical Methods and Numerical Simulation – Universidad Politécnica Salesiana.</li>    
