--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 			  <li><strong>Diego Vallejo-Huanga</strong>, Alex Terreros, Diego Vicuña, <a href="https://doi.org/10.1007/978-3-031-71315-6_10"><em>“Facial Ethnicity Identification by Collaborative Voting System”</em></a>, Proceedings of the <a href="https://www.cdve.org/index.html"> 21st International Conference on Cooperative Design, Visualization and Engineering CDVE 2024</a>, Lecture Notes in Computer Science, Springer, Valencia, Spain, September 15-18, 2024.</p>	  
 			  <li><strong>Diego Vallejo-Huanga</strong>, Alexis Villavicencio, Kevin Cadena, Paulina Morillo, <a href="https://doi.org/10.1007/978-3-031-71315-6_7"><em>“Implementing Similarity Matrices in a Web Interactive Tool for Scientific Articles Matching”</em></a>, Proceedings of the <a href="https://www.cdve.org/index.html"> 21st International Conference on Cooperative Design, Visualization and Engineering CDVE 2024</a>, Lecture Notes in Computer Science, Springer, Valencia, Spain, September 15-18, 2024.</p>	    
 			  <li><strong>Diego Vallejo-Huanga</strong>, Alexis Vallejo, Gustavo Contreras, <a href="https://doi.org/10.1007/978-3-031-66336-9_20"><em>“A Content-Based System for Discrimination Detection of Ecuadorian Text”</em></a>, Proceedings of the <a href="https://saiconference.com/IntelliSys"> 10th Intelligent Systems Conference IntelliSys 2024</a>, Lecture Notes in Networks and Systems, Springer, Amsterdam, Netherlands, September 5-6, 2024.</p>	  
-		          <li><strong>Diego Vallejo-Huanga</strong>, Jefferson Cajas, Víctor Caicedo, <a href="https://wconf.in/index.php/important-dates/"><em>“Sign Language Translation System to People with Hearing Disabilities in Ecuador (In Press)”</em></a>, Proceedings of the <a href="https://wconf.in/"> 2nd World Conference on Communication & Computing WCONF 2024</a>, IEEE Xplore Digital Library, Raipur, India, July 12-14, 2024.</p>
+		          <li><strong>Diego Vallejo-Huanga</strong>, Jefferson Cajas, Víctor Caicedo, <a href="https://doi.org/10.1109/WCONF61366.2024.10692312"><em>“Sign Language Translation System to People with Hearing Disabilities in Ecuador”</em></a>, Proceedings of the <a href="https://wconf.in/"> 2nd World Conference on Communication & Computing WCONF 2024</a>, IEEE Xplore Digital Library, Raipur, India, July 12-14, 2024.</p>
 			  <li>Kléber Sánchez, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.5220/0012815400003756"><em>“Prediction of Academic Success in a University and Improvement Using Lean Tools”</em></a>, Proceedings of the <a href="https://data.scitevents.org/?y=2024"> 13th International Conference on Data Science, Technology and Applications DATA 2024</a>, SCITEPRESS Digital Library, Dijon, France, July 9-11, 2024.</p>	  
 		          <li><strong>Diego Vallejo-Huanga</strong>, Jair Morocho, Juan Salgado, <a href="https://doi.org/10.1109/IIAI-AAI-Winter61682.2023.00040"><em>“SimilaCode: Programming Source Code Similarity Detection System based on NLP”</em></a>, Proceedings of the <a href="https://ieeexplore.ieee.org/xpl/conhome/10488102/proceeding"> 14th International Conference on Smart Computing and Artificial Intelligence SCAI AAI 2023</a>, IEEE Xplore Digital Library, Bali, Indonesia, December 11-13, 2023.</p>
 		 	  <li>Fredy Altamirano, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.1007/978-3-031-53161-3_4"><em>“Cost Operation Optimization with Binary Integer Linear Programming in a Cosmetic Company”</em></a>, Proceedings of the <a href="https://link.springer.com/book/10.1007/978-3-031-53161-3"> 8th International Conference on Management of Manufacturing Systems EAI MMS 2023</a>, EAI/Springer Innovations in Communication and Computing, Springer, Bratislava, Slovakia, October 24-26, 2023.</p>
@@ -292,6 +292,8 @@
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
           <p><ul><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>
+          <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
+	  <p><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>  
           <p><li>Reviewer in the Journal of Life Sciences <a href="https://lagranja.ups.edu.ec/index.php/granja/">La Granja</a>. ISSN: 1390-3799, e-ISSN: 1390-8596, DOI: 10.17163/lgr.</a></p>
 	  <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
           <p><li>Peer reviewer of Research Projects 2021 <a href="http://www.uptc.edu.co/">Universidad Pedagógica y Tecnológica de Colombia UPTC.</a></p>
@@ -312,11 +314,15 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              CEDIA Research Grant “Fondos Divulga 2024” – Spain.</li>    
+            <li>
+	    <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               Fundación Carolina Scholarship 2023 – Computer Science Doctorate – Universitat Politècnica de València.</li>
             <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              CEDIA Research Grant “Fondos Divulga 2023” – Intellisys Conference, Netherlands.</li>    
+              CEDIA Research Grant “Fondos Divulga 2023” – Netherlands.</li>    
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Postgraduate Scholarship 2021 – Master in Mathematical Methods and Numerical Simulation – Universidad Politécnica Salesiana.</li>    
