--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
 	     <div class="resume-item d-flex flex-column flex-md-row mb-5">
 		 <div class="resume-content mr-auto">
 		     <h3 class="mb-0">Thesis</h3>
-		          </h2><ul><li><p>Diego Vallejo-Huanga, <a href="https://riunet.upv.es/handle/10251/69089"><em>“Clustering de Documentos con Restricciones de Tamaño”</em></a>, Thesis of Master in Information Management</a>, Higher Technical School of Computer Engineering – ETSINF, Universitat Politècnica de València, Valencia, Spain, 2016.</p>
-			  <li><p>Diego Vallejo-Huanga, <a href="http://bibdigital.epn.edu.ec/handle/15000/4266"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Thesis of Engineering in Electronics and Telecommunications</a>, Faculty of Electrical and Electronic Engineering – FIEE, Escuela Politécnica Nacional, Quito, Ecuador, 2011.</p>
+		          </h2><ul><li><p>Diego Vallejo-Huanga, <a href="https://dspace.ups.edu.ec/handle/123456789/26116"><em>“Optimización Matemática del Rendimiento de un Modelo de Forecasting con Suavizamiento Exponencial Simple”</em></a>, Thesis of Master in Mathematical Methods and Numerical Simulation</a>, Master Program in Mathematics, Universidad Politécnica Salesiana, Quito, Ecuador, 2023.</p>
+			  <li><p>Diego Vallejo-Huanga, <a href="https://riunet.upv.es/handle/10251/69089"><em>“Clustering de Documentos con Restricciones de Tamaño”</em></a>, Thesis of Master in Information Management</a>, Higher Technical School of Computer Engineering – ETSINF, Universitat Politècnica de València, Valencia, Spain, 2016.</p>
+		          <li><p>Diego Vallejo-Huanga, <a href="http://bibdigital.epn.edu.ec/handle/15000/4266"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Thesis of Engineering in Electronics and Telecommunications</a>, Faculty of Electrical and Electronic Engineering – FIEE, Escuela Politécnica Nacional, Quito, Ecuador, 2011.</p>
 		 </div>
 	     </div>
            
