--- a/index.html
+++ b/index.html
@@ -293,7 +293,9 @@
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
           <p><ul><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>
-          <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
+          <p><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>		  
+          <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla24/pcm.html">International Conference on Machine Learning and Applications ICMLA 2024.</a></p>
+	  <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla23/index.php">International Conference on Machine Learning and Applications ICMLA 2023.</a></p>	  
 	  <p><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>  
           <p><li>Reviewer in the Journal of Life Sciences <a href="https://lagranja.ups.edu.ec/index.php/granja/">La Granja</a>. ISSN: 1390-3799, e-ISSN: 1390-8596, DOI: 10.17163/lgr.</a></p>
 	  <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
