--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><ul><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>
-          <p><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>		  
-          <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla24/pcm.html">International Conference on Machine Learning and Applications ICMLA 2024.</a></p>
-	  <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla23/index.php">International Conference on Machine Learning and Applications ICMLA 2023.</a></p>	  
-	  <p><li>Scientific peer reviewer in <a href="http://www.ccai.net/">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>  
+          <p><ul><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla24/pcm.html">International Conference on Machine Learning and Applications ICMLA 2024.</a></p>
+	  <p><li>Scientific peer reviewer in <a href="https://link.springer.com/content/pdf/bfm:978-3-031-57850-2/1">19th iConference 2024.</a></p>
+	  <p><li>Scientific peer reviewer in <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10603155">International Conference on Computer Communication and Artificial Intelligence CCAI 2024.</a></p> 
+          <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla23/index.php">International Conference on Machine Learning and Applications ICMLA 2023.</a></p>	  
+	  <p><li>Scientific peer reviewer in <a href="http://www.ccai.net/2022.html">International Conference on Computer Communication and Artificial Intelligence CCAI 2022.</a></p>  
           <p><li>Reviewer in the Journal of Life Sciences <a href="https://lagranja.ups.edu.ec/index.php/granja/">La Granja</a>. ISSN: 1390-3799, e-ISSN: 1390-8596, DOI: 10.17163/lgr.</a></p>
 	  <p><li>Scientific peer reviewer in <a href="https://www.icmla-conference.org/icmla21//">International Conference on Machine Learning and Applications ICMLA 2021.</a></p>
           <p><li>Peer reviewer of Research Projects 2021 <a href="http://www.uptc.edu.co/">Universidad Pedagógica y Tecnológica de Colombia UPTC.</a></p>
