--- a/index.html
+++ b/index.html
@@ -322,19 +322,21 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              CEDIA Research Grant “Fondos Divulga 2025” – Spain.</li>    
+            <li>
+	        <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               CEDIA Research Grant “Fondos Divulga 2024” – Spain.</li>    
             <li>
-	    <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Fundación Carolina Scholarship 2023 – Computer Science Doctorate – Universitat Politècnica de València.</li>
-            <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               CEDIA Research Grant “Fondos Divulga 2023” – Netherlands.</li>    
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Postgraduate Scholarship 2021 – Master in Mathematical Methods and Numerical Simulation – Universidad Politécnica Salesiana.</li>    
-	    <li>
+	        <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Best Academic Record 2016 – Master's Degree in Information Management – Universitat Politècnica de València.</li>
             <li>
